# oomph

./: README.md  pyproject.toml
paper/: build_paper.py  demo.ipynb  make_corner_plots.ipynb
src/oomph/: __init__.py  data.py
src/oomph/data/: catalog.csv
tests/: build_paper.py  test_data.py
