[tool.poetry]
name = "oomph"
version = "0.1.0"
description = "Fit flares in corot data"
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
astropy = ">=4.1"
matplotlib = ">=3.2"
scikit-image = ">=0.17.2"
pandas = ">=1.1.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
